# libcomex

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_bak.txt  README.md  build  build.sh  ca.crt  ca.key  conanfile.py  rsa_private_key.pem  rsa_public_key.pem  test.crt  test.p12
dependent/: build
dependent/cairo/: Makefile.in
dependent/cairo/src/: Makefile.in
dependent/curl/: CMakeLists.txt  Makefile  config.status  curl-config  libcurl.pc  libtool
dependent/curl/docs/: Makefile
dependent/curl/include/: Makefile
dependent/curl/scripts/: Makefile
dependent/curl/src/: Makefile
dependent/curl/tests/: Makefile  configurehelp.pm
dependent/fltk/: configure
dependent/fontconfig/: Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure
dependent/fontconfig/autom4te.cache/: output.0  requests  traces.0  traces.1
dependent/fontconfig/conf.d/: 10-no-antialias.conf  10-yes-antialias.conf  Makefile.am  Makefile.in  README.in  link_confs.py  meson.build  write-35-lang-normalize-conf.py
dependent/fontconfig/doc/: FcAtomicCreate.3  FcAtomicDeleteNew.3  FcAtomicDestroy.3  FcAtomicLock.3  FcAtomicNewFile.3  FcAtomicOrigFile.3  FcAtomicReplaceOrig.3  FcAtomicUnlock.3  FcBlanksAdd.3  FcBlanksCreate.3  FcBlanksDestroy.3  FcBlanksIsMember.3  FcCacheCopySet.3  FcCacheCreateTagFile.3  FcCacheDir.3  FcCacheNumFont.3  FcCacheNumSubdir.3  FcCacheSubdir.3  FcCharSetAddChar.3  FcCharSetCopy.3  FcCharSetCount.3  FcCharSetCoverage.3  FcCharSetCreate.3  FcCharSetDelChar.3  FcCharSetDestroy.3  FcCharSetEqual.3  FcCharSetFirstPage.3  FcCharSetHasChar.3  FcCharSetIntersect.3  FcCharSetIntersectCount.3  FcCharSetIsSubset.3  FcCharSetMerge.3  FcCharSetNew.3  FcCharSetNextPage.3  FcCharSetSubtract.3  FcCharSetSubtractCount.3  FcCharSetUnion.3  FcConfigAcceptFilter.3  FcConfigAcceptFont.3  FcConfigAppFontAddDir.3  (+198 more)
dependent/fontconfig/fc-cache/: Makefile.in
dependent/fontconfig/fc-case/: Makefile.in
dependent/fontconfig/fc-cat/: Makefile.in
dependent/fontconfig/fc-conflist/: Makefile.in
dependent/fontconfig/fc-lang/: Makefile.in
dependent/fontconfig/fc-list/: Makefile.in
dependent/fontconfig/fc-match/: Makefile.in
dependent/fontconfig/fc-pattern/: Makefile.in
dependent/fontconfig/fc-query/: Makefile.in
dependent/fontconfig/fc-scan/: Makefile.in
dependent/fontconfig/fc-validate/: Makefile.in
dependent/fontconfig/fontconfig/: Makefile.in
dependent/fontconfig/its/: Makefile.in
dependent/fontconfig/src/: Makefile.in  fccache.c
dependent/fontconfig/test/: Makefile.in
dependent/freetype/: CMakeLists.txt
dependent/libidn/: Makefile.in  aclocal.m4  config.h.in  configure
dependent/libidn/autom4te.cache/: output.1  requests  traces.0  traces.1
dependent/libidn/csharp/: Makefile.in
dependent/libidn/doc/: Makefile.in  libidn.info  version.texi
dependent/libidn/examples/: Makefile.in
dependent/libidn/fuzz/: Makefile.in
dependent/libidn/gl/: Makefile.in
dependent/libidn/java/: Makefile.in
dependent/libidn/lib/: Makefile.in
dependent/libidn/po/: ja.po
dependent/libidn/src/: Makefile.in
dependent/libidn/tests/: Makefile.in
dependent/libjbig/: Makefile
dependent/libjbig/libjbig/: Makefile  tstcodec
dependent/libjbig/pbmtools/: jbgtopbm  pbmtojbg
dependent/libnfs/: CMakeLists.txt
dependent/libnfs/lib/: libnfs.c
dependent/libpixman/: configure
dependent/libpixman/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dependent/libpng/: CMakeLists.txt
dependent/libsmb2/: CMakeLists.txt  Makefile.in  config.h.in  configure
dependent/libsmb2/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2
dependent/libsmb2/examples/: CMakeLists.txt  Makefile.in
dependent/libsmb2/include/: Makefile.in
dependent/libsmb2/lib/: Makefile.in
dependent/libtar/: Makefile.in  aclocal.m4  configure
dependent/libtar/autoconf/: ltmain.sh
dependent/libtar/autom4te.cache/: output.1  requests  traces.0  traces.1
dependent/libunistring/: Makefile.in  aclocal.m4  config.h.in  configure
dependent/libunistring/autom4te.cache/: output.1  requests  traces.0  traces.1
dependent/libunistring/doc/: Makefile.in  libunistring.info  version.texi
dependent/libunistring/gnulib-local/: Makefile.in
dependent/libunistring/lib/: Makefile.in
dependent/libunistring/tests/: Makefile.in
dependent/libusb/: Makefile  config.status  libtool  libusb-1.0.pc
dependent/libusb/examples/: Makefile
dependent/libusb/libusb/: Makefile
dependent/libusb/tests/: Makefile
dependent/libzip/: CMakeLists.txt
dependent/libzip/lib/: zip_source_file_win32_named.c
dependent/mosquitto/: config.mk
dependent/mosquitto/client/: mosquitto_pub  mosquitto_rr  mosquitto_sub
dependent/mosquitto/lib/: libmosquitto.so.1  mosquitto.c  time_mosq.c
dependent/mosquitto/src/: CMakeLists.txt  mosquitto
dependent/win/: readme.txt
dependent/win/include/: archive.h  archive_entry.h  uv.h
dependent/xz/: Makefile  config.h  config.status  libtool
dependent/xz/debug/: Makefile
dependent/xz/lib/: Makefile
dependent/xz/po/: Makefile  Makefile.in
etc/: ca.crt  ca.key  client.crt  client.key  mosquitto.conf  server.crt  server.key
src/: comex_archive.cpp  comex_cairo_watermark.cpp  comex_curl.cpp  comex_iconv.cpp  comex_liteipc.cpp  comex_magic.cpp  comex_mqtt.cpp  comex_nfs.cpp  comex_openssl.cpp  comex_poco.cpp  comex_podofo.cpp  comex_session.cpp  comex_smb.cpp  comex_socket.cpp  comex_zlib.cpp
src/export/: comex.h  comex_archive.h  comex_cairo_watermark.h  comex_curl.h  comex_iconv.h  comex_liteipc.h  comex_magic.h  comex_mqtt.h  comex_nfs.h  comex_openssl.h  comex_poco.h  comex_podofo.h  comex_session.h  comex_smb.h  comex_socket.h  comex_zlib.h
src/test/: comex_archive_test.cpp  comex_cairo_watermark_test.cpp  comex_curl_test.cpp  comex_iconv_test.cpp  comex_liteipc_test.cpp  comex_magic_test.cpp  comex_mqtt_test.cpp  comex_nfs_test.cpp  comex_openssl_test.cpp  comex_poco_test.cpp  comex_poco_test.h  comex_podofo_test.cpp  comex_session_test.cpp  comex_smb_test.cpp  comex_socket_test.cpp  comex_test.cpp
(+452 files in other folders)
